# JUCE-audio-modification

docs/: README.md
src/: CMakeLists.txt  README.md  remove_build.sh  testapp.jucer
src/JuceLibraryCode/: JuceHeader.h
src/Source/: ActiveFilterComponent.cpp  ActiveFilterComponent.hpp  ActiveFilterController.cpp  ActiveFilterController.hpp  BandPassFilter.cpp  BandPassFilter.hpp  CMakeLists.txt  FFT.cpp  FFT.hpp  FFTFilterProcessor.cpp  FFTFilterProcessor.hpp  FileLoader.cpp  FileLoader.hpp  FileWriter.cpp  FileWriter.hpp  Filter.hpp  FilterParameters.hpp  FilterTypeEnum.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  HarmonicExciterFilter.cpp  HarmonicExciterFilter.hpp  HighPassFilter.cpp  HighPassFilter.hpp  LowPassFilter.cpp  LowPassFilter.hpp  MainComponent.cpp  MainComponent.h  MicrophoneHandler.cpp  MicrophoneHandler.hpp  ReverbFilter.cpp  ReverbFilter.hpp  SliderComponent.cpp  SliderComponent.hpp  SpectralShiftFilter.cpp  SpectralShiftFilter.hpp  TransportStateC.hpp  WindowFunction.cpp  WindowFunction.hpp
src/cmake/: cpm.cmake
